core/gateway/deployments/production/00-namespace-simple.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: athena-gateway
  labels:
    name: athena-gateway
    environment: production
